<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <name>StoRM Backend server</name>
  <groupId>org.italiangrid.storm</groupId>
  <artifactId>storm-backend-server</artifactId>
  <version>1.12.0</version>

  <properties>

    <!-- versions of the project dependencies -->
    <commonsConfigurationVersion>1.10</commonsConfigurationVersion>
    <jerseyVersion>2.25.1</jerseyVersion>
    <jettyVersion>8.1.9.v20130131</jettyVersion>
    <slf4jVersion>1.7.2</slf4jVersion>
    <logbackVersion>1.2.3</logbackVersion>
    <nettyVersion>3.5.0.Final</nettyVersion>
    <jnaVersion>3.3.0</jnaVersion>
    <jettisonVersion>1.1</jettisonVersion>
    <commonsDbcpVersion>2.8.0</commonsDbcpVersion>
    <commonsIoVersion>2.8.0</commonsIoVersion>
    <ini4jVersion>0.5.2</ini4jVersion>
    <xmlrpcVersion>3.1.3</xmlrpcVersion>
    <jaxrpcVersion>1.1</jaxrpcVersion>
    <jsonVersion>20080701</jsonVersion>
    <junitVersion>4.13.2</junitVersion>
    <commonsCliVersion>1.4</commonsCliVersion>
    <commonsDiscoveryVersion>0.5</commonsDiscoveryVersion>
    <commonsHttpClientVersion>3.1</commonsHttpClientVersion>
    <activationVersion>1.1.1</activationVersion>
    <commonsValidatorVersion>1.7</commonsValidatorVersion>
    <wsdl4jVersion>1.5.1</wsdl4jVersion>
    <xalanVersion>2.7.1</xalanVersion>
    <mailVersion>1.4.6</mailVersion>
    <jakartaXmlBindVersion>2.3.3</jakartaXmlBindVersion>

    <mysqlConnectorVersion>8.0.16</mysqlConnectorVersion>

    <guavaVersion>30.0-jre</guavaVersion>
    <metrics.version>3.1.0</metrics.version>
    <xercesImplVersion>2.12.1</xercesImplVersion>

    <mockitoVersion>1.10.19</mockitoVersion>
    <hamcrestVersion>1.3</hamcrestVersion>

    <nativeInterfaceVersion>1.0.6</nativeInterfaceVersion>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

  </properties>

  <build>

    <finalName>storm-backend-server</finalName>

    <plugins>

      <!-- Enable maven compiler plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <compilerArgs>
            <arg>-Xlint:deprecation</arg>
            <arg>-Xlint:unchecked</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <!-- Enable maven surefire plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20</version>
      </plugin>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <finalName>storm-backend-server</finalName>
          <appendAssemblyId>false</appendAssemblyId>
          <outputDirectory>${project.build.directory}</outputDirectory>
          <descriptors>
            <descriptor>${basedir}/src/main/assemblies/assembly.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.2</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>

    <dependency>
      <groupId>io.dropwizard.metrics</groupId>
      <artifactId>metrics-core</artifactId>
      <version>${metrics.version}</version>
    </dependency>

    <dependency>
      <groupId>io.dropwizard.metrics</groupId>
      <artifactId>metrics-jetty8</artifactId>
      <version>${metrics.version}</version>
    </dependency>

    <dependency>
      <groupId>io.dropwizard.metrics</groupId>
      <artifactId>metrics-servlets</artifactId>
      <version>${metrics.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guavaVersion}</version>
    </dependency>

    <dependency>
      <groupId>org.italiangrid</groupId>
      <artifactId>storm-native-interface</artifactId>
      <version>${nativeInterfaceVersion}</version>
    </dependency>

    <dependency>
      <groupId>commons-configuration</groupId>
      <artifactId>commons-configuration</artifactId>
      <version>${commonsConfigurationVersion}</version>
      <exclusions>
        <exclusion>
          <groupId>javax.servlet</groupId>
          <artifactId>servlet-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>javax.ws.rs</groupId>
      <artifactId>javax.ws.rs-api</artifactId>
      <version>2.0.1</version>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jersey.core</groupId>
      <artifactId>jersey-server</artifactId>
      <version>${jerseyVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-servlet-core</artifactId>
      <version>${jerseyVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-json-jackson</artifactId>
      <version>${jerseyVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.ext</groupId>
      <artifactId>jersey-bean-validation</artifactId>
      <version>${jerseyVersion}</version>
    </dependency>

    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId>
      <version>${jettyVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-servlet</artifactId>
      <version>${jettyVersion}</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4jVersion}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logbackVersion}</version>
    </dependency>

    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty</artifactId>
      <version>${nettyVersion}</version>
    </dependency>

    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <version>${jnaVersion}</version>
    </dependency>

    <dependency>
      <groupId>org.codehaus.jettison</groupId>
      <artifactId>jettison</artifactId>
      <version>${jettisonVersion}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-dbcp2</artifactId>
      <version>${commonsDbcpVersion}</version>
    </dependency>

    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commonsIoVersion}</version>
    </dependency>

    <dependency>
      <groupId>org.ini4j</groupId>
      <artifactId>ini4j</artifactId>
      <version>${ini4jVersion}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.xmlrpc</groupId>
      <artifactId>xmlrpc-server</artifactId>
      <version>${xmlrpcVersion}</version>
      <exclusions>
        <exclusion>
          <groupId>javax.servlet</groupId>
          <artifactId>servlet-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>javax.xml</groupId>
      <artifactId>jaxrpc-api</artifactId>
      <version>${jaxrpcVersion}</version>
    </dependency>

    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>${jsonVersion}</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junitVersion}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>${commonsCliVersion}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>commons-discovery</groupId>
      <artifactId>commons-discovery</artifactId>
      <version>${commonsDiscoveryVersion}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>${commonsHttpClientVersion}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>javax.activation</groupId>
      <artifactId>activation</artifactId>
      <version>${activationVersion}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>commons-validator</groupId>
      <artifactId>commons-validator</artifactId>
      <version>${commonsValidatorVersion}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>wsdl4j</groupId>
      <artifactId>wsdl4j</artifactId>
      <version>${wsdl4jVersion}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>xalan</groupId>
      <artifactId>xalan</artifactId>
      <version>${xalanVersion}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>javax.mail</groupId>
      <artifactId>mail</artifactId>
      <version>${mailVersion}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>${mockitoVersion}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>${hamcrestVersion}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>${mysqlConnectorVersion}</version>
    </dependency>

    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <version>${jakartaXmlBindVersion}</version>
    </dependency>

    <dependency>
      <groupId>xerces</groupId>
      <artifactId>xercesImpl</artifactId>
      <version>${xercesImplVersion}</version>
    </dependency>

  </dependencies>

</project>
